--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,5 @@ spring:
     url: jdbc:mysql://172.17.0.2:3306/needlework?createDatabaseIfNotExist=true
     username: root
     password: root
+  jackson:
+    default-property-inclusion: non_null
